# tauri-plugin-async-graphql

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
