[package]
name = "tauri-plugin-async-graphql"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-async-graphql"

[dependencies]
tauri = { version = "2.0.3" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-graphql = "7.0.11"
serde_json = "1.0.132"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
